k8s/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multi-tier-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    
spec:
  rules:
  - host: local.test
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: react-frontend
            port:
              number: 80
      - path: /api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: flask-backend
            port:
              number: 5000
